[tool.poetry]
name = "project-currency-bot"
version = "0.1.0"
description = ""
authors = ["Sergei Gorlanov <itserg90@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pytelegrambotapi = "^4.15.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
